*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.1 ===
* Updated code to match lltl library headers.
* Better integration with system::follow_url() routine.
* Added automatic style creation from XML schema.
* Added simple language configuration support by the tk::Schema class.
* Fixed allocation for invisible widgets inside the tk::Grid container.
* Updated behaviour of TextDataSink to be more memory-effective.
* Property 'size_constraints' renamed to 'constraints' for tk::Align and tk::Group widgets.
* Added 'set_horizontal' and 'set_vertical' methods to the embedding property.
- Add custom mouse pointer for fraction actions.

=== 0.5.0 ===
* Initial release.